fix(campaign): correct icon layout issue caused by reduced padding

--- a/src/newapp/shared/components/drag-drop-button/drag-drop-button.component.scss
+++ b/src/newapp/shared/components/drag-drop-button/drag-drop-button.component.scss
@@ -52,7 +52,7 @@
   justify-content: center;
   align-items: center;
   width: 120px;
-  padding: 5px 0;
+  padding: 5px 10px;
 
   .box {
     flex: 1;
